tests/compile-fail/integration__integration__expr_compile__unary_neg_fallbacks_unavailable.snap
---
source: tests/integration/expr_compile.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:29:13
   │
29 │     int a = -$I0;
   │             ^^^^ this unary operation not supported by format

error: feature not supported by format
   ┌─ <input>:30:15
   │
30 │     float x = -%F0;
   │               ^^^^ this unary operation not supported by format


